# codexCLI-mem

./: .gitignore  README.md  codex.code-workspace
.codex/memory/: memory.jsonl
codex-rs/: .gitignore  Cargo.toml  justfile
codex-rs/.codex/memory/: memory.db  memory.jsonl  sqlite-test.db  sqlite-verify2.db  sqlite-verify3.db  sqlite-verify4.db
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: lib.rs  main.rs  memory.rs
codex-rs/cli/tests/: memory.rs
codex-rs/core/src/: lib.rs  memory.rs
codex-rs/docs/: memory.md
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: cli.rs  lib.rs  memory.rs
codex-rs/gui/: Cargo.toml
codex-rs/gui/src/: bridge.rs  main.rs  memory.rs
codex-rs/memory/: Cargo.toml
codex-rs/memory/src/: factory.rs  lib.rs  migrate.rs  recall.rs  redact.rs  types.rs
codex-rs/memory/src/store/: jsonl.rs  mod.rs  sqlite.rs
codex-rs/memory/tests/: recall.rs  redact.rs  store.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  chatwidget.rs  cli.rs  history_cell.rs  lib.rs  memories_panel.rs  memory.rs  slash_command.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs
codex-rs/tui/src/chatwidget/: tests.rs
codex-rs/tui/tests/suite/: memories_panel.rs  mod.rs
codex-rs/tui/tests/suite/snapshots/: all__suite__memories_panel__panel_renders.snap  all__suite__memories_panel__preamble_preview.snap
docs/: config.md  memory-backends.md
