[package]
name = "codex-memory"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
# Optional SQLite backend for Phase 2.
sqlite = ["dep:rusqlite"]

[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]

[dev-dependencies]
tempfile = "3"
